--- a/legacy/JUnit/junit-patterns.tex
+++ b/legacy/JUnit/junit-patterns.tex
@@ -25,7 +25,7 @@
 
 \newcommand{\code}[1]{\lstinline!#1!}
 
-\title{JUnit}
+\title{JUnit Patterns}
 \subtitle{Le cadre d'applications JUnit en quelques patrons de conception}
 \author[G. Sunyé]{Gerson Suny\'e \\ gerson.sunye@univ-nantes.fr}
 \institute[U. Nantes \hspace{2em} \insertframenumber/ \inserttotalframenumber]{LS2N \--- Université de Nantes}
@@ -44,7 +44,7 @@
 %\begin{frame} {Le cadre d'applications}
  %   %\vspace{1cm}
 %    Présentation de la conception et de l'implémentation de JUnit.
-%\end{frame}
+%\end{frame}[
 
 
 \subsection{Cas de test}
