Translate Markdown slides to Asciidoc
Translate remaining patterns: broker, decorator, dto, facade,
message-queuing, pipes and filers, and reactor.

--- a/src/asciidoc/composite.adoc
+++ b/src/asciidoc/composite.adoc
@@ -193,8 +193,7 @@ image::cd-container.png[align=center]
 image::cd-file.png[align=center]
 
 [.impact]
-== link:../..[Back]
+== link:../..[Back to the main presentation]
 
-== Test diagram
 
 
