Include Abstract Factory and Observer patterns"

--- a/src/asciidoc/abstract-factory.adoc
+++ b/src/asciidoc/abstract-factory.adoc
@@ -31,7 +31,7 @@ Gamma et al. 95
 
 == Motivation - example
 
-image::abstract-factory-example.png[align=center]
+image::abstract-factory-example.png[align=center,width=1200px]
 
 
 == Applicability
