--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -54,14 +54,15 @@ image::https://i.creativecommons.org/l/by-nc/4.0/88x31.png[Creative Commons Lice
 * link:dto.html[DTO]
 * link:observer.html[Observer]
 * link:abstract-factory.html[Abstract Factory]
-
-.Concurrency Patterns:
-* link:reactor.html[Reactor]
-* link:message-queueing.html[Message Queueing]
+* link:flyweight.html[Flyweight]
 ****
 
 [.col-6]
 ****
+.Concurrency Patterns:
+* link:reactor.html[Reactor]
+* link:message-queueing.html[Message Queueing]
+
 .Architectural Patterns:
 * link:broker.html[Broker]
 * link:layers.html[Layers]
