--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -52,6 +52,7 @@ image::https://i.creativecommons.org/l/by-nc/4.0/88x31.png[Creative Commons Lice
 * link:observer.html[Observer]
 * link:abstract-factory.html[Abstract Factory]
 * link:flyweight.html[Flyweight]
+* link:mediator.html[Mediator]
 
 == Contents (3/3)
 
