--- a/src/slides/asciidoc/command.adoc
+++ b/src/slides/asciidoc/command.adoc
@@ -1,17 +1,4 @@
-:revealjs_center: false
-:revealjs_display: flex
-:revealjs_transition: none
-:revealjs_slideNumber: c/t
-:revealjs_theme: stereopticon
-:revealjs_width: 1920
-:revealjs_height: 1080
-:revealjs_history: true
-:revealjs_margin: 0
-:source-highlighter: highlightjs
-:imagesdir: images
-:includedir: includes
-:sectids!:
-
+include::../common/commons.adoc[]
 = _Command_
 
 Gamma et al. 95
@@ -84,7 +71,6 @@ Command in Java 8 with Lambdas
 }
 
 () -> System.out.println("Hello World");
-
 ----
 
 
@@ -124,7 +110,6 @@ public class Macro {
   cmds.forEach(Command::execute);
  }
 }
-
 ----
 
 
