--- a/src/slides/asciidoc/iterator.adoc
+++ b/src/slides/asciidoc/iterator.adoc
@@ -1,17 +1,4 @@
-:revealjs_center: false
-:revealjs_display: flex
-:revealjs_transition: none
-:revealjs_slideNumber: c/t
-:revealjs_theme: stereopticon
-:revealjs_width: 1920
-:revealjs_height: 1080
-:revealjs_history: true
-:revealjs_margin: 0
-:source-highlighter: highlightjs
-:imagesdir: images
-:includedir: includes
-:sectids!:
-
+include::../common/commons.adoc[]
 = _Iterator_
 
 Gamma et al. 95
