--- a/src/slides/asciidoc/composite.adoc
+++ b/src/slides/asciidoc/composite.adoc
@@ -1,17 +1,4 @@
-:revealjs_center: false
-:revealjs_display: flex
-:revealjs_transition: none
-:revealjs_slideNumber: c/t
-:revealjs_theme: stereopticon
-:revealjs_width: 1920
-:revealjs_height: 1080
-:revealjs_history: true
-:revealjs_margin: 0
-:source-highlighter: highlightjs
-:imagesdir: images
-:includedir: includes
-:sectids!:
-
+include::../common/commons.adoc[]
 = _Composite_
 
 Gamma et al. 95
@@ -50,7 +37,6 @@ Client -> "p1:Picture" : display()
 "p2:Picture" -> "r2:Rectangle" : display()
 "p1:Picture" -> "l1:Line" : display()
 "p1:Picture" -> "r1Rectangle" : display()
-
 ....
 
 == Applicability
