--- a/src/slides/asciidoc/decorator.adoc
+++ b/src/slides/asciidoc/decorator.adoc
@@ -1,17 +1,4 @@
-:revealjs_center: false
-:revealjs_display: flex
-:revealjs_transition: none
-:revealjs_slideNumber: c/t
-:revealjs_theme: stereopticon
-:revealjs_width: 1920
-:revealjs_height: 1080
-:revealjs_history: true
-:revealjs_margin: 0
-:source-highlighter: highlightjs
-:imagesdir: images
-:includedir: includes
-:sectids!:
-
+include::../common/commons.adoc[]
 = _Decorator_
 
 Gamma et al. 95
@@ -41,7 +28,6 @@ Gamma'95
 
 image::decorator-classes.png[align=center]
 
-'''
 
 == Motivation - Example (2/2)
 
